manifest/edu_ready/k8s_basic/netshoot.yaml
apiVersion: v1
kind: Pod
metadata:
  name: netshoot
spec:
#  serviceAccountName: edu
  containers:
  - name: netshoot
    image: ghcr.io/shclub/netshoot
    command: ['sh', '-c', 'sleep 6000']
    imagePullPolicy: IfNotPresent
